sandbox/output
StockProfit.tests.cpp:10:5: error: unknown type name 'StockProfit'
    StockProfit stockProfit(prices);
    ^
1 error generated.
make: *** [test] Error 1
